SERVER-111873 Fix query framework with classic lookup (#43466)

GitOrigin-RevId: f25fe66f387f6fc6b642ecace252d988dd1d64f8