src/mongo/db/commands/query_cmd/map_reduce_agg.cpp
@@ -191,6 +191,7 @@ bool runAggregationMapReduce(OperationContext* opCtx,
     {
         stdx::lock_guard<Client> lk(*opCtx->getClient());
         curop->setPlanSummary(lk, explainer.getPlanSummary());
+        curop->debug().queryFramework = exec->getQueryFramework();
     }
 
     try {
